--- a/stylesheet.css
+++ b/stylesheet.css
@@ -42,6 +42,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-grow: 1;
+    box-sizing: border-box;
 }
 #angryFace {
     box-sizing: border-box;
@@ -65,6 +66,8 @@ body {
     border-width: 0 0.2rem 0.2rem 0.2rem;
     align-items: center;
     justify-content: space-around;
+    padding: 0.4rem;
+    box-sizing: border-box;
 }
 .playerChoice div{
     display: flex;
@@ -85,3 +88,20 @@ body {
     background-color: rgba(102, 12, 12, 0.4);
     padding: 1rem;
 }
+
+.rock,.paper,.scissors{
+    transition: all 0.1s ease;
+    border-radius: 50%;
+}
+.rock:hover,.paper:hover,.scissors:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 0.2rem black;
+
+}
+.playerChoice img:active{
+    transform: scale(0.9);
+}
+
+
+.clicked{transform: scale(3);
+box-shadow: 2rem 2rem 2rem black;}
